[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/objects/LevelButton.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/button.png" type="Texture" id=2]
[ext_resource path="res://src/objects/Indicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sound/button.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 4.5 )

[node name="LevelButton" type="Area2D"]
collision_layer = 0
monitorable = false
script = ExtResource( 1 )

[node name="Indicator" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -75 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="PressedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
